--- a/DSAlgoBDDFramework/pom.xml
+++ b/DSAlgoBDDFramework/pom.xml
@@ -25,7 +25,6 @@
     <artifactId>selenium-java</artifactId>
     <version>4.16.1</version>
 </dependency>
-
      
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
@@ -34,6 +33,14 @@
     <version>7.7.1</version>
     <scope>test</scope>
 </dependency>
+   
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>7.15.0</version>
+</dependency>
+   
     <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 <dependency>
     <groupId>org.apache.logging.log4j</groupId>
