--- a/DSAlgoBDDFramework/pom.xml
+++ b/DSAlgoBDDFramework/pom.xml
@@ -167,6 +167,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
+          <configuration>
+              <parallel>methods</parallel>
+              <useUnlimitedThreads>true</useUnlimitedThreads>
+          </configuration>
       </plugin>       
         
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
