--- a/DSAlgoBDDFramework/src/test/resources/extent.properties
+++ b/DSAlgoBDDFramework/src/test/resources/extent.properties
@@ -2,12 +2,12 @@ extent.reporter.spark.start=true
 extent.reporter.spark.out=test-output/SparkReport/Spark.html
 extent.reporter.spark.config=src/test/resources/extent-config.xml
 
-extent.reporter.spark.out=Extent-Reports-html/SparkReport/
+extent.reporter.spark.out=extent-reports/SparkReport.html
 
 screenshot.dir=test-output/
 screenshot.rel.path=../
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=Extent-Reports-pdf/PdfReport/ExtentPdf.pdf
+extent.reporter.pdf.out=extent-reports/extentReport.pdf
 #basefolder.name=reports
 #basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
